--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-    "name": "firebase-sqs",
-    "version": "0.0.1",
-    "engines": {
-        "node": "5.9.1"
-    },
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js"
-    },
-    "dependencies": {}
+  "name": "firebase-sqs",
+  "version": "0.0.1",
+  "engines": {
+    "node": "5.9.1"
+  },
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "dependencies": {
+    "firebase-admin": "^4.0.6"
+  }
 }
