--- a/.env
+++ b/.env
@@ -6,5 +6,5 @@
     "FIREBASE_DB_REF": "server/saving-data/fireblog/posts",
     "AWS_ACCESS_KEY_ID": "",
     "AWS_SECRET_ACCESS_KEY": "",
-    "AWS_SESSION_TOKEN":""
+    "AWS_SQS_QUEUE_URL":""
 }
